force-app/main/default/objects/Funding_Request__c/Funding_Request__c.object-meta.xml
<CustomObject>
    <description>Record of request for outbound financial funding - can be used for both internal and external purposes.</description>
    <label>Funding Request</label>
    <nameField>
        <label>Funding Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>