force-app/main/default/objects/Funding_Request__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description>Date the application has been submitted.</description>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>