force-app/main/default/objects/Funding_Request__c/fields/Applying_Contact__c.field-meta.xml
<CustomField>
    <fullName>Applying_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Applying Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Funding Requests</relationshipLabel>
    <relationshipName>Funding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>