force-app/main/default/objects/Funding_Request__c/fields/Applying_Employee__c.field-meta.xml
<CustomField>
    <fullName>Applying_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applying Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Funding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>