force-app/main/default/objects/Funding_Request__c/fields/Applying_Organization__c.field-meta.xml
<CustomField>
    <fullName>Applying_Organization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Applying Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Requests</relationshipLabel>
    <relationshipName>Funding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>