force-app/main/default/objects/Funding_Request__c/fields/Awarded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Awarded_Amount__c</fullName>
    <label>Awarded Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>