force-app/main/default/objects/Funding_Request__c/fields/Awarded_Date__c.field-meta.xml
<CustomField>
    <fullName>Awarded_Date__c</fullName>
    <label>Awarded Date</label>
    <type>Date</type>
</CustomField>