force-app/main/default/objects/Funding_Request__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Date the application is fully closed - either awarded and fully disbursed, declined or withdrawn.</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>