force-app/main/default/objects/Funding_Request__c/fields/Closed_reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_reason__c</fullName>
    <label>Closed reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>