force-app/main/default/objects/Funding_Request__c/fields/Funding_Program__c.field-meta.xml
<CustomField>
    <fullName>Funding_Program__c</fullName>
    <description>Lookup to the funding program from which funds are being requested.</description>
    <label>Funding Program</label>
    <referenceTo>Funding_Program__c</referenceTo>
    <relationshipLabel>Funding Requests</relationshipLabel>
    <relationshipName>Funding_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>