force-app/main/default/objects/Funding_Request__c/fields/FundingProgram__c.field-meta.xml
<CustomField>
    <fullName>FundingProgram__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the funding program from which funds are being requested.</description>
    <label>Funding Program</label>
    <referenceTo>Funding_Program__c</referenceTo>
    <relationshipLabel>Funding Requests</relationshipLabel>
    <relationshipName>FundingRequests</relationshipName>
    <type>Lookup</type>
</CustomField>