force-app/main/default/objects/Funding_Request__c/fields/Requested_For__c.field-meta.xml
<CustomField>
    <fullName>Requested_For__c</fullName>
    <label>Requested For</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>