force-app/main/default/objects/Funding_Request__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <type>TextArea</type>
</CustomField>