force-app/main/default/objects/Funding_Request__c/fields/Total_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Total_Cancelled__c</fullName>
    <label>Total Cancelled</label>
    <summarizedField>Disbursement__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Disbursement__c.Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Disbursement__c.Funding_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>