force-app/main/default/objects/Funding_Request__c/fields/Total_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Total_Disbursed__c</fullName>
    <description>Total of all disbursements with a status of  &quot;paid&quot;</description>
    <label>Paid Disbursements</label>
    <summarizedField>Disbursement__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Disbursement__c.Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Disbursement__c.Funding_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>