force-app/main/default/objects/Funding_Request__c/fields/Total_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_Remaining__c</fullName>
    <description>Amount remaining to be disbursed or cancelled.</description>
    <formula>Awarded_Amount__c - Total_Disbursed__c -  Total_Cancelled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>