force-app/main/default/objects/Funding_Request__c/fields/Unpaid_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Disbursements__c</fullName>
    <description>The rollup of all disbursements that do not have a status  &quot;Paid&quot; or &quot;Cancelled&quot;</description>
    <label>Unpaid Disbursements</label>
    <summarizedField>Disbursement__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Disbursement__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Paid, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Disbursement__c.Funding_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>