force-app/main/default/objects/Funding_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applying_Contact__c</columns>
    <columns>Applying_Employee__c</columns>
    <columns>Applying_Organization__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_Amount__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Awarded_Amount__c</columns>
    <columns>Awarded_Date__c</columns>
    <columns>Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>