force-app/main/default/objects/Funding_Request__c/listViews/Awarded_Funding_Requests.listView-meta.xml
<ListView>
    <fullName>Awarded_Funding_Requests</fullName>
    <columns>NAME</columns>
    <columns>Applying_Contact__c</columns>
    <columns>Applying_Employee__c</columns>
    <columns>Applying_Organization__c</columns>
    <columns>Status__c</columns>
    <columns>Awarded_Amount__c</columns>
    <columns>Awarded_Date__c</columns>
    <columns>Term_Start_Date__c</columns>
    <columns>Term_End_Date__c</columns>
    <columns>Total_Disbursed__c</columns>
    <columns>Total_Remaining__c</columns>
    <columns>Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Awarded</value>
    </filters>
    <label>Awarded Funding Requests</label>
</ListView>