force-app/main/default/objects/Funding_Request__c/listViews/Fully_Disbursed_Funding_Requests.listView-meta.xml
<ListView>
    <fullName>Fully_Disbursed_Funding_Requests</fullName>
    <columns>NAME</columns>
    <columns>Applying_Contact__c</columns>
    <columns>Applying_Employee__c</columns>
    <columns>Applying_Organization__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_Amount__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Awarded_Amount__c</columns>
    <columns>Awarded_Date__c</columns>
    <columns>Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Fully Disbursed</value>
    </filters>
    <label>Fully Disbursed Funding Requests</label>
</ListView>