force-app/main/default/objects/Funding_Request__c/listViews/Funding_Requests_by_Status.listView-meta.xml
<ListView>
    <fullName>Funding_Requests_by_Status</fullName>
    <columns>NAME</columns>
    <columns>Applying_Organization__c</columns>
    <columns>Applying_Contact__c</columns>
    <columns>FundingProgram__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>Funding Requests by Status</label>
</ListView>