force-app/main/default/objects/Funding_Request__c/listViews/Invited_Funding_Requests.listView-meta.xml
<ListView>
    <fullName>Invited_Funding_Requests</fullName>
    <columns>NAME</columns>
    <columns>Applying_Contact__c</columns>
    <columns>Applying_Employee__c</columns>
    <columns>Applying_Organization__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Invited</value>
    </filters>
    <label>Invited Funding Requests</label>
</ListView>